# flet-ncnn-test

./: pyproject.toml  todo.txt
.github/skills/flet-development/: SKILL.md
.github/skills/flet-development/examples/: 01_basic_app.py  02_async_clock.py  03_form_validation.py  04_file_picker_service.py  05_shared_preferences.py  06_animation_effects.py  07_dialog_example.py  08_layout_responsive.py  09_theme_styling.py  10_navigation_menu.py  11_data_table.py  12_window_controls.py  13_drag_drop.py  14_keyboard_events.py  15_gestures.py  16_clipboard.py  17_media_player.py  18_canvas_custom_paint.py  19_file_operations.py  20_charts_canvas_visualization.py  README.md
.github/skills/flet-development/references/: api-quick-reference.md  breaking-changes.md  discovery-log.md  error-guide.md  error-quick-reference.md  new-controls.md
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
.serena/memories/flet-ncnn-test/: project.md
src/: export_yolo.py  flet_detect_holding.py  main.py  ncnn_detector.py  test_yolo.py
src/app/controllers/: detection_controller.py
src/app/controls/: __init__.py  object_detection_camera.py
src/app/models/: detector.py  detector.py.bak  types.py
src/app/views/: detection_view.py
src/tests/: flet_detecion_dog.py  test_ncnn.py
src/yolo11n_ncnn_model/: metadata.yaml
tools/: patch_apk_ncnn.py
