[project]
name = "laptop-detect"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.86.0.dev2",
    "flet-camera>=0.86.0.dev2",
    "ncnn",
    "numpy",
    "opencv-python",
    "pillow",
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.3",
    "flet-desktop>=0.85.3",
    "flet-web>=0.85.3",
    # Integration testing with `flet test` / pytest. The `test` extra brings in
    # pytest, pytest-asyncio and the screenshot-comparison dependencies.
    "flet[test]>=0.85.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.flet]
org = "com.mycompany"
product = "laptop-detect"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"

[tool.flet.compile]
packages = false

[tool.flet.android.dev_packages]
#flet-camera = "/tmp/flet-camera-src"

[tool.flet.android]
target_arch = ["arm64-v8a", "armeabi-v7a", "x86_64"]

[tool.flet.android.permission]
"android.permission.CAMERA" = true
"android.permission.RECORD_AUDIO" = true